--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-build/
+# Directories
 .cache/
+build/
+CMakeFiles/
+
+# Singular files
 utils/pyasm.exe
+cmake_install.cmake
+CMakeCache.txt
+compile_commands.json
+cpp_processor_model
+Makefile
+
+# To be kept
+!build/CMakeLists.txt
