general exception handler + excp_exit + div by 0 exception implemented

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/cpp_processor_model",
-            "args": ["${workspaceFolder}/tests/inputs/jmp.hex"],
+            "args": ["${workspaceFolder}/program_files/exceptionsTest.hex"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
