Presentation demo + slides in pdf format

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 build/*
 program_files/*
 tests/outputs/*
+presentation/*
+live_demo/*
 
 # Singular files
 utils/pyasm.exe
@@ -11,3 +13,6 @@ utils/pyasm.exe
 !build/CMakeLists.txt
 !program_files/*.asm
 !program_files/*.hex
+!live_demo/*.asm
+!live_demo/cpp_processor_model
+!live_demo/quickParse.sh
